23.mar (la)
      - fix #9883: Insert vertical frame between two parts of the same line (volta, cresc) causes crash
22.mar (la)
      - fix #9842: Tempo value not exported in Lilypond
20.mar (la)
      - fix #9852: Measure number hidden by horizontal frame
19.mar (la)
      - fix #9830: Percussion sounds not exported correctly in MusicXML
18.mar (la)
      - fix #9792: Clef not displayed after changing clefs in previous measures
      - fix #9790: Pasting notes featuring key signature change and lyrics corrupts following bar
14.mar (la)
      - fix crash when inserting vertical frame (#9765)
10.mar (la)
      - fallback to default soundfont if can't load the preferences one
09.mar (la)
      - fix playback start position when repeat in the score
25.feb (tb)
      - adding Lithuanian (mscore_lt.ts) language
19.feb (db)
      - copy editing for demo scores (usuariomuse)
13.feb (db)
      - copy editing for demo scores (usuariomuse)
03.feb (la)
      - fix #9040: Dragging note horizontally removes accidental permanently
02.feb (la)
      - improve MusicXML import of clefs
      - Changing velocity and on/off offsets for a group of selected notes (miwarre patch)
01.feb (la)
      - fix #8974: Rest entry shortcut does not work in Voice 2
      - fix #9002: Reset Position doesn't affect tuplet bracket
      - fix #4975: Parts should have multi-measure rests by default
      - Update MuseScore.com plugin, better wording & worflow, 
      easy signout, signout on exit
30.jan (db)
      - fixed vocal range for bartione and bass (instruments.xml)
29.jan (ws)
      - minor fix for version compare
25.jan (la)
      - fix #8865: Crash when changing instrument on drumstaff
      - fix regression : colision between accidental bracket and previous note
24.jan (ws)
      - applied patch from Ribet which hopefully fixes #7857
      (lv)
      - fix MusicXML export of bracketed accidentals
       (ws)
      - #8842: add patch from miwarre (bracketed accidentals not saved)
23.jan (lv)