@@ -152,7 +152,7 @@ class LoadMusicXml : public LoadFile {
 //---------------------------------------------------------
 
 /**
- Load MusicXML file \a qf, return false if OK and true on error.
+ Load MusicXML file \a qf, return true if OK and false on error.
  */
 
 bool LoadMusicXml::loader(QFile* qf)
@@ -164,10 +164,10 @@ bool LoadMusicXml::loader(QFile* qf)
             col.setNum(column);
             ln.setNum(line);
             error = err + "\n at line " + ln + " column " + col;
-            return true;
+            return false;
             }
       docName = qf->fileName();
-      return false;
+      return true;
       }
 
 //---------------------------------------------------------
@@ -275,18 +275,21 @@ bool LoadCompressedMusicXml::loader(QFile* qf)
 
 /**
  Import MusicXML file \a name into the Score.
+ return false on error
  */
 
-void Score::importMusicXml(const QString& name)
+bool Score::importMusicXml(const QString& name)
       {
       LoadMusicXml lx;
-      lx.load(name);
+      if (!lx.load(name))
+            return false;
       setSaved(false);
       MusicXml musicxml(lx.doc());
       musicxml.import(this);
       connectTies();
       layoutAll = true;
       _created = false;
+      return true;
       }
 
 //---------------------------------------------------------
@@ -295,18 +298,21 @@ void Score::importMusicXml(const QString& name)
 
 /**
  Import compressed MusicXML file \a name into the Score.
+ return false on error
  */
 
-void Score::importCompressedMusicXml(const QString& name)
+bool Score::importCompressedMusicXml(const QString& name)
       {
       LoadCompressedMusicXml lx;
-      lx.load(name);
+      if (!lx.load(name))
+            return false;
       setSaved(false);
       MusicXml musicxml(lx.doc());
       musicxml.import(this);
       connectTies();
       layoutAll = true;
       _created = false;
+      return true;
       }
 
 //---------------------------------------------------------
