@@ -1104,7 +1104,7 @@ void MuseScore::loadScoreList()
       QSettings s;
       for (int i = RECENT_LIST_SIZE-1; i >= 0; --i) {
             QString path = s.value(QString("recent-%1").arg(i),"").toString();
-            if (!path.isEmpty()) {
+            if (!path.isEmpty() && QFileInfo(path).exists()) {
                   recentScores.removeAll(path);
                   recentScores.prepend(path);
                   }
